<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#2B2F42"
    android:orientation="vertical"
    tools:context=".UprawaAktywnosc">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/nazwaPolaView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="#74A7AE"
            android:ems="5"
            android:text="@string/nazwa"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/powierzchniaView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="#74A7AE"
            android:text="@string/powierzchnia"
            android:textColor="@android:color/black"
            android:textSize="18sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView18"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="6dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="6dp"
        android:background="#74A7AE"
        android:text="@string/Uprawa"
        android:textColor="?attr/colorPrimaryDark"
        android:textSize="18sp" />

    <RadioGroup
        android:id="@+id/radioGroupUprawa"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:layout_marginBottom="6dp">

        <RadioButton
            android:id="@+id/radioButton13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/oranie" />

        <RadioButton
            android:id="@+id/radioButton14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/agregat" />

        <RadioButton
            android:id="@+id/radioButton15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/talerzowanie" />

        <RadioButton
            android:id="@+id/radioButton16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Bronowanie" />

    </RadioGroup>

    <TextView
        android:id="@+id/textView19"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="6dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="6dp"
        android:background="#74A7AE"
        android:text="@string/uwagi"
        android:textColor="?attr/colorPrimaryDark"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/uwagiEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/btnDodajUprawe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:layout_marginTop="18dp"
        android:text="@string/btnDodaj"
        android:textSize="18sp" />

</LinearLayout>