<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background=" #2B2F42"
    android:orientation="vertical"
    tools:context=".PryskanieAktywnosc">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nazwaPolaView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:background="#74A7AE"
                android:text="@string/nazwa"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:background="#74A7AE"
                android:padding="6dp"
                android:text="@string/NazwaOprysku"
                android:textColor="?attr/colorPrimaryDark"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/nazwaopryskuEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/WprowadzDane"
                android:inputType="textPersonName"
                android:padding="6dp"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:background="#74A7AE"
                android:text="@string/Dawka"
                android:textColor="?attr/colorPrimaryDark"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/dawkaEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/WprowadzDane"
                android:inputType="numberDecimal"
                android:padding="6dp"
                android:textColor="@color/white" />

            <RadioGroup
                android:id="@+id/radioGroupdawka"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp">

                <RadioButton
                    android:id="@+id/radioButton6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/litry"
                    android:textColor="@color/white" />

                <RadioButton
                    android:id="@+id/radioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/kg"
                    android:textColor="@color/white" />
            </RadioGroup>

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:layout_marginTop="18dp"
                android:background="#74A7AE"
                android:text="@string/RodzajSrodka"
                android:textColor="?attr/colorPrimaryDark"
                android:textSize="18sp" />

            <RadioGroup
                android:id="@+id/radioGroupRodzaj"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp">

                <RadioButton
                    android:id="@+id/radioButton7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/herbicyd"
                    android:textColor="@color/white" />

                <RadioButton
                    android:id="@+id/radioButton9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Fungicyd"
                    android:textColor="@color/white" />

                <RadioButton
                    android:id="@+id/radioButton8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Insektycyd"
                    android:textColor="@color/white" />

                <RadioButton
                    android:id="@+id/radioButton10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/stymulator"
                    android:textColor="@color/white" />
            </RadioGroup>

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:layout_marginTop="12dp"
                android:background="#74A7AE"
                android:text="@string/przyczyna"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/przyczynaEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:ems="10"
                android:hint="@string/przyczynaHint"
                android:inputType="textPersonName"
                android:paddingBottom="6dp"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btndodajPryskanie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/dodajZabieg"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>