<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2B2F42"
    android:orientation="vertical"
    tools:context=".NawozenieAktywnosc">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="6dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#2B2F42"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nazwaPolaView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="6dp"
                android:background="#74A7AE"
                android:padding="6dp"
                android:text="@string/nazwa"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="11dp"
                android:background="#74A7AE"
                android:padding="5dp"
                android:text="@string/NazwaNawozu"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/nazwaNawozuEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/WprowadzDane"
                android:inputType="textPersonName"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="#74A7AE"
                android:padding="5dp"
                android:text="@string/Dawka"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/dawkaEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:ems="10"
                android:hint="@string/WprowadzDane"
                android:inputType="numberDecimal"
                android:padding="5dp"
                android:textColor="@color/white" />

            <RadioGroup
                android:id="@+id/radioGroupDawka"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/radioKg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/kg" />

                <RadioButton
                    android:id="@+id/radioLitr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/litry" />
            </RadioGroup>

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#74A7AE"
                android:text="@string/skladnik"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <RadioGroup
                android:id="@+id/radioGroupSkladnik"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/radioAzot"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/azot" />

                <RadioButton
                    android:id="@+id/radioFosfor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fosfor" />

                <RadioButton
                    android:id="@+id/radioPotas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/potas" />

                <RadioButton
                    android:id="@+id/radioInne"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/inne" />
            </RadioGroup>

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#74A7AE"
                android:text="@string/ZawartoscSkladnika"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/skladnikEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/WprowadzDane"
                android:inputType="numberDecimal"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btnDodajNawozenie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/dodajZabieg"
                android:textSize="18sp" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>