<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2B2F42"
    android:orientation="vertical"
    tools:context=".ZagrozenieAktywnosc">

    <TextView
        android:id="@+id/nazwaPolaView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:background="#74A7AE"
        android:text="@string/nazwa"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/powierzchniaView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:background="#74A7AE"
        android:text="@string/powierzchnia"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="6dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="6dp"
        android:background="#74A7AE"
        android:text="@string/wybierzZagrozenie"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <RadioGroup
        android:id="@+id/radioGroupZagrozenie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:padding="6dp">

        <RadioButton
            android:id="@+id/radioButton18"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:text="@string/zwierzęta"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/radioButton19"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:text="@string/robak"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/radioButton17"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:text="@string/inne"
            android:textColor="@color/white" />

    </RadioGroup>

    <EditText
        android:id="@+id/inneZagrozenie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/btnDodajZagrozenie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/DodajZagrozenie"
        android:textColor="@color/white"
        android:textSize="24sp" />
</LinearLayout>