<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background=" #2B2F42"


    android:orientation="vertical"
    tools:context=".PoleAktywnosc">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:theme="@style/Theme.BasicLab.AppBarOverlay">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/Theme.BasicLab.PopupOverlay" />
    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/nazwaPolaView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:background="#74A7AE"
        android:text="@string/nazwa"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/powierzchniaView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:background="#74A7AE"
        android:text="@string/powierzchnia"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnZabieg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:gravity="center"
            android:text="@string/dodajZabieg"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btnDodajNotatke"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/DodajNotatke"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btnZobaczZabieg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/zobaczzabiegi"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btnDodajZagrozenie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/DodajZagrozenie"
            android:textSize="24sp" />

        <Button
            android:id="@+id/brnInfoPole"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/InfoOpolu"
            android:textSize="24sp" />
    </LinearLayout>

</LinearLayout>