<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2B2F42"
    android:orientation="vertical"
    tools:context=".ZbiorAktywnosc">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp">

        <TextView
            android:id="@+id/nazwaPolaView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:layout_weight="1"
            android:background="#74A7AE"
            android:ems="5"
            android:padding="6dp"
            android:text="@string/nazwa"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/powierzchniaView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:layout_weight="1"
            android:background="#74A7AE"
            android:padding="6dp"
            android:text="@string/powierzchnia"
            android:textColor="@android:color/black"
            android:textSize="18sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView13"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:layout_marginTop="12dp"
        android:background="#74A7AE"
        android:text="@string/NazwaRosliny"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/nazwaRoslinyEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="6dp"
        android:layout_marginBottom="6dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Pszenica" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="6dp"
        android:layout_marginTop="6dp"
        android:layout_marginRight="6dp"
        android:background="#74A7AE"
        android:text="@string/plon"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/plonEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="12" />

    <RadioGroup
        android:id="@+id/radioGroupPlon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp">

        <RadioButton
            android:id="@+id/radioButton11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sztuki"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/radioButton12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tony"
            android:textColor="@color/white" />
    </RadioGroup>

    <Button
        android:id="@+id/btnZapiszZbior"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:layout_marginTop="12dp"
        android:text="@string/btnDodaj"
        android:textColor="@color/white"
        android:textSize="24sp" />

</LinearLayout>