<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="  #2B2F42"
    android:orientation="vertical"
    tools:context=".DodajZabiegAktywnosc">

    <TextView
        android:id="@+id/nazwaPolaView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:padding="5dp"
        android:text="@string/nazwa"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnNawozenie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:padding="5dp"
        android:text="@string/nawozenie"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnPryskanie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:padding="5dp"
        android:text="OPRYSKI"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnZbior"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:padding="5dp"
        android:text="@string/zbior"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnUprawa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:padding="5dp"
        android:text="@string/uprawa"
        android:textColor="@color/white"
        android:textSize="18sp" />
</LinearLayout>